src/styles/tufte.css
@charset "UTF-8";

/* ----- 1. Fonts ----- */

/* Import ET Book styles
   adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */

@font-face {
    font-family: "et-book";
    src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
    src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "et-book";
    src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
    src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: "et-book";
    src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
    src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "et-book-roman-old-style";
    src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
    src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

/* ----- 2. Tufte CSS styles ----- */
:root {
    /* light */
    --whiteBackground: #fffff8;
    --blackText: #111;
    --whiteShadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
    /* dark */
    --blackBackground: #151515;
    --whiteText: #ddd;
    --blackShadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
}

.light {
    --mainBg: var(--whiteBackground);
    --fontColor: var(--blackText);
    --textShadow: var(--whiteShadow);
}

.dark {
    --mainBg: var(--blackBackground);
    --fontColor: var(--whiteText);
    --textShadow: var(--blackShadow);
}

html {
    font-size: 10px;
}

body {
    width: 81.25%;
    margin-left: auto;
    margin-right: auto;
    padding-left: 6.25%;
    padding-right: 12.25%;
    font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
    background-color: var(--mainBg);
    color: var(--fontColor);
    max-width: 1400px;
    counter-reset: sidenote-counter;
}

h1 {
    font-weight: 400;
    margin-top: 3rem;
    margin-bottom: 1.4rem;
    font-size: 3.2rem;
    line-height: 1;
}

h2 {
    /* font-style: normal; */
    font-variant: small-caps;
    font-weight: 400;
    margin-top: 2rem;
    margin-bottom: 1.4rem;
    font-size: 2.2rem;
    line-height: 1;
}

h3 {
    font-style: italic;
    font-weight: 400;
    font-size: 1.7rem;
    margin-top: 1.75rem;
    margin-bottom: 1.4rem;
    line-height: 1;
}

h4 {
    font-variant: small-caps;
    font-weight: 400;
    font-size: 1.4rem;
    margin-top: 1.5rem;
    margin-bottom: 1.4rem;
    line-height: 1;
}

hr {
    display: block;
    height: 1px;
    width: 100%;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}


.numeral {
    font-family: et-book-roman-old-style;
}

.danger {
    color: red;
}

article {
    width: 62.25%;
    padding: 0rem 0rem 5rem 0rem;
}

section {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

p,
dl,
ol,
ul {
    font-size: 1.4rem;
    line-height: 2rem;
}

p {
    margin-top: 1.4rem;
    margin-bottom: 1.4rem;
    padding-right: 0;
    vertical-align: baseline;
}

/* ----- 3. Custom changes ----- */

p.subtitle {
    font-style: italic;
    margin-top: 1.25rem;
    margin-bottom: 1.5rem;
    font-size: 1.2rem;
    display: block;
    line-height: 1;
}

p.pageinfo {
    font-style: italic;
    margin-top: 1.5rem;
    margin-bottom: 1.25rem;
    font-size: 1rem;
    display: block;
    line-height: 1;
}

/* ----- 4. Chapter Epigraphs ----- */
div.epigraph {
    margin: 3em 0;
}

div.epigraph>blockquote {
    margin-top: 3em;
    margin-bottom: 3em;
}

div.epigraph>blockquote,
div.epigraph>blockquote>p {
    font-style: italic;
}

div.epigraph>blockquote>footer {
    font-style: normal;
}

div.epigraph>blockquote>footer>cite {
    font-style: italic;
}
/* ... */

